[package]
name = "neuronal_networks_from_scratch"
version = "0.1.0"
authors = ["Eduardo Luis Santos Delgado <eduardoluissd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-rand = "0.13.0"